--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <h1>Custom Video Player</h1>
     <video
       src="videos/gone.mp4"
       id="video"
